--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <h2>Que tipo de mãe é a sua?</h2>
         </section>
     </header>
-  <section id="itens"> 
+  <section id="geral"> 
     
-        <section id="geral">
+        <section id="itens">
 
             <section id="textos">
-                <div id="nome"><h3>PLENA</h3></div>
-                 <div  id="situacao"><h3>Vou bater perna até eles voltarem</h3></div>
+                <article id="nome"><h3>PLENA</h3></article>
+                 <article  id="situacao"><h3>Vou bater perna até eles voltarem</h3></article>
             </section>
 
             <div class="img">
@@ -40,7 +40,7 @@
 </section> 
 
     <footer>
-        <p><a href="https://github.com/monicahdias">Mônica Dias</a> - All rights reserved &copy;</p>
+        <p><a href="https://github.com/monicahdias" target="_blank">Mônica Dias</a> - All rights reserved &copy;</p>
     </footer>
 
     <script src="./JS/script.js"></script>
