--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="textoImagem">
 
             <div id="img">
-                <img id="img1" src="./images/img1.png" alt="mãe plena" width="98%">
+                <img id="img1" src="./images/img1.png" alt="mãe plena" width=380vw>
             </div>
 
             <div id="textos">
